--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "CrowdCart",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "Shopping Web App",
   "author": "Team Dancing-Penguin",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "license": "UNLICENSED",
   "private": true,
@@ -23,5 +23,8 @@
     "request": "^2.36.0",
     "sinon": "^1.17.2",
     "supertest": "^0.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.9"
   }
 }
