--- a/package.json
+++ b/package.json
@@ -1,14 +1,25 @@
 {
   "name": "CrowdCart",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Shopping Web App",
   "author": "Team Dancing-Penguin",
   "scripts": {
     "start": "node index.js",
-    "start:dev": "nodemon index.js"
+    "start:dev": "nodemon index.js",
+    "lint": "standard --verbose | snazzy",
+    "lint-fix": "standard --fix --verbose | snazzy"
   },
   "license": "UNLICENSED",
   "private": true,
+  "standard": {
+    "ignore": [
+      "**/*.html"
+    ],
+    "globals": [
+      "angular",
+      "google"
+    ]
+  },
   "dependencies": {
     "angular-ui-bootstrap": "^2.1.3",
     "bcrypt-nodejs": "0.0.3",
@@ -26,6 +37,8 @@
     "supertest": "^0.10.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "snazzy": "^8.0.0",
+    "standard": "^12.0.1"
   }
 }
